--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.1.3",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
+    "react-bootstrap": "^0.32.3",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
