--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-api": "node server.js"
+  },
+  "devDependencies": {
+    "json-server": "^0.14.0",
+    "jsonwebtoken": "^8.3.0"
   }
 }
