--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,9 @@
         ]
       }
     ],
+    "react/prefer-stateless-function": [0],
+    "jsx-a11y/label-has-associated-control": [0],
+    "jsx-a11y/label-has-for": [0],
     "prettier/prettier": [
       "error",
       {
