--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "crud-users-react-redux",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://rodriguezmanu.github.io/crud-users-react-redux",
   "dependencies": {
     "bootstrap": "^4.1.3",
     "jwt-decode": "^2.2.0",
@@ -23,7 +24,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "start-api": "node server.js"
+    "start-api": "node server.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
@@ -34,6 +37,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.10.0",
+    "gh-pages": "^1.2.0",
     "json-server": "^0.14.0",
     "jsonwebtoken": "^8.3.0",
     "prettier": "^1.14.2"
