--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.10.0",
+    "express": "^4.16.3",
     "gh-pages": "^1.2.0",
     "json-server": "^0.14.0",
     "jsonwebtoken": "^8.3.0",
