--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "eject": "react-scripts eject",
     "start-api": "node server.js",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "postinstall": "npm run build"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
