--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "start-api": "node server.js",
-    "postinstall": "npm run build"
+    "start-api": "node server.js"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
