--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "start-api": "node server.js"
+    "start-api": "node server.js",
+    "postinstall": "react-scripts build"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
