--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "connected-react-router": "^4.4.1",
+    "history": "^4.7.2",
     "jwt-decode": "^2.2.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
